J_0_test/old/mconf_matlab.h

//typedef __int64 MC_HANDLE;  // for 64-bit architecture
typedef unsigned long long int  MC_HANDLE;
typedef unsigned int  MC_HANDLE;  // for 32-bit architecture
typedef unsigned int  MC_HANDLE;  // for 32-bit architecture
  /// The function loads the magnetic configuration stored in the file \b fname.
  /// The function recognizes the format of the file by analyzing its contents;
  /// bc-, bc-binary-, LHD- and VMEC(wout, version>=6.20)-format are supported.
  /// For bc-format see \ref W7X_Format "W7-X format".
  /// On exit the function returns the handle of the object, that holds magnetic configuration.
  /// @param[in] fname is the name of the file to load.
  /// @return  if the function succeeds, the return value is \b non-zero, \b zero otherwise.
  /// \sa the detailed description of CStconfig::load()
  WINDLLEXPORT MC_HANDLE MCload      (char * fname);
  /// Get the B<SUB>00</SUB> value of the magnetic field on axis.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @return the B<SUB>00</SUB> value of the magnetic field on magnetic axis.
  WINDLLEXPORT double MCgetB00(MC_HANDLE mConf);
  /// Set the value of magnetic field on magnetic axis at given cylindrical angle.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] B0 is the value[Tesla] of magnetic field to set.
  /// @param[in] ficyl is the value[radians] of cylindrical angle.
  WINDLLEXPORT void   MCsetB0 (MC_HANDLE mConf,double B0,double ficyl);
  /// The function returns V'(s) = dVolume/ds in [m^3].
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] s is the normalized toroidal flux.
  /// \note V' is negative if (s,theta,phi)-coordinate system is left handed
  WINDLLEXPORT double MCVprime(MC_HANDLE mConf,double s);
  /// The function returns plasma volume V(s) in [m^3].
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] s is the normalized toroidal flux.
  /// \note Volume is negative if (s,theta,phi)-coordinate system is left handed
  WINDLLEXPORT double MCVolume(MC_HANDLE mConf,double s);
  /// The method returns cartesian coordinates which correspond to the mixed coordinates.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] mixCoord are the mixed coordinates, array[3] =(s,theta,fi), where
  ///  s is the flux surface label,
  ///  theta is the magnetic poloidal angle,
  ///  fi is the cylindrical angle.
  /// @param[out] xyz is the cartesian coordinates.
  WINDLLEXPORT void   MCmix2xyz(MC_HANDLE mConf,const double *mixCoord, double *xyz);
  /// The function returns cartesian B-vector.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] xyz is the cartesian coordinates
  /// @param[out] B is the cartesian B-field vector
  /// @return \b s (normalized toroidal flux), which normally must satisfy \b 0<=s<=1; \n
  /// <b>1<s<sMax</b> means that the point lies in the extrapolated region,
  ///    retuned parameters are not reliable here\n
  WINDLLEXPORT double MCgetBxyz(MC_HANDLE mConf,const double *xyz,double *B);
  /// The method traces the Last Closed Magnetic Surface (LCMS).
  /// The method finds intersections of the ray with the LCMS, 
  /// where the ray is R(t)=r0+rd*t,  and t>=0.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param r0 is the Cartesian coordinates of the ray origin, must be outside with respect to the LCMS,
  /// @param rd is the direction of the ray in Cartesian coordinates,
  /// @param entryPoint this vector at return contains the Cartesian coordinates of the ray entry point into the plasma,
  /// @param exitPoint this vector at return contains the Cartesian coordinates of the ray exit point from the plasma,
  /// @return  if the function succeeds, the return value is \b non-zero; \b zero otherwise.
  WINDLLEXPORT int MCgetRayIntersectionPoints(MC_HANDLE mConf,const double *r0,const double *rd,double *entryPoint,double *exitPoint);
  
  /// The function returns the normalized poloidal flux, where s is the normalized toroidal flux.
  WINDLLEXPORT double MCtorFlux2polFlux(MC_HANDLE mConf,double s);